<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:coverflow="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context="com.techno.studentguide.activity.DetailsActivity">

    <LinearLayout
        android:id="@+id/AD_TB_details_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_toolbar"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/AD_IV_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:src="@drawable/ic_back_arrow" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/AD_IV_call"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:padding="@dimen/_10sdp"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_circle_call" />

                <ImageView
                    android:id="@+id/AD_IV_vendor_logo"
                    android:layout_width="@dimen/_70sdp"
                    android:layout_height="@dimen/_70sdp"
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"
                    android:padding="@dimen/_10sdp"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_logo" />

                <ImageView
                    android:id="@+id/AD_IV_google_map"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:padding="@dimen/_10sdp"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_pin_circle" />


            </LinearLayout>

            <com.techno.studentguide.customview.CustomTextView
                android:id="@+id/AD_TV_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/AD_TB_details_toolbar"
                android:gravity="center"
                android:padding="@dimen/_2sdp"
                android:text="School name"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold" />
        </LinearLayout>


    </LinearLayout>


    <ScrollView
        android:id="@+id/AD_SV_scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/AD_TB_details_toolbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_parent1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <com.techno.studentguide.customview.CustomTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:text="@string/txt_title_address"
                        android:layout_marginRight="@dimen/_5sdp"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/_12sdp"
                        android:textStyle="bold" />

                    <com.techno.studentguide.customview.CustomTextView
                        android:id="@+id/AD_TV_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:lines="3"
                        android:padding="@dimen/_2sdp"
                        android:text="Hawali, Tunis street.\nNext to McDonalds\nAcross the road form the gas station. "
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/_10sdp" />
                </LinearLayout>


                <fragment
                    android:id="@+id/AD_IV_map"
                    android:name="com.google.android.gms.maps.MapFragment"
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="@dimen/_80sdp" />


                <ImageView
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_map"
                    android:visibility="gone" />
            </LinearLayout>

            <View
                android:id="@+id/ll_parent2"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_below="@+id/ll_parent1"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:id="@+id/ll_parent3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ll_parent2"
                android:gravity="left"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">


                    <com.techno.studentguide.customview.CustomTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_marginRight="@dimen/_5sdp"
                        android:gravity="center"
                        android:text="@string/txt_title_contact"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/_12sdp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/phone_number_1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:adjustViewBounds="true"
                            android:padding="@dimen/_10sdp"
                            android:scaleType="fitXY"
                            android:src="@drawable/ic_call" />

                        <com.techno.studentguide.customview.CustomTextView
                            android:id="@+id/AD_TV_first_phone_number"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:padding="@dimen/_2sdp"
                            android:text="+965 123428722"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/_10sdp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/phone_number_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:adjustViewBounds="true"
                            android:padding="@dimen/_10sdp"
                            android:scaleType="fitXY"
                            android:src="@drawable/ic_call" />

                        <com.techno.studentguide.customview.CustomTextView
                            android:id="@+id/AD_TV_second_phone_number"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:padding="@dimen/_2sdp"
                            android:text="+965 237128312"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/_10sdp" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/AD_IV_twitter"
                        android:layout_width="@dimen/_80sdp"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:background="#4596D5"
                        android:scaleType="fitXY"
                        android:src="@drawable/ic_twitter" />

                    <ImageView
                        android:id="@+id/AD_IV_instagram"
                        android:layout_width="@dimen/_80sdp"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:scaleType="fitXY"
                        android:src="@drawable/instagram" />
                </LinearLayout>

            </LinearLayout>

            <View
                android:id="@+id/ll_parent4"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_below="@+id/ll_parent3"
                android:background="@android:color/darker_gray" />

            <com.techno.studentguide.customview.CustomTextView
                android:id="@+id/Description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ll_parent4"
                android:layout_marginLeft="@dimen/_10sdp"
                android:gravity="center"
                android:layout_marginRight="@dimen/_5sdp"
                android:text="@string/txt_title_description"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold" />

            <com.techno.studentguide.customview.CustomTextView
                android:id="@+id/Description_contect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Description"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:padding="@dimen/_2sdp"
                android:text="It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout."
                android:textColor="@android:color/black"
                android:textSize="@dimen/_10sdp" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_below="@+id/Description_contect"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@android:color/darker_gray" />


            <com.techno.studentguide.customview.CustomTextView
                android:id="@+id/Gallery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/view"
                android:padding="@dimen/_10sdp"
                android:text="@string/txt_title_gallery"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold" />

            <com.techno.studentguide.customview.CustomTextView
                android:id="@+id/not_found"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Gallery"
                android:gravity="center"
                android:padding="@dimen/_10sdp"
                android:text="@string/txt_title_gallery"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_12sdp"
                android:visibility="gone" />

            <it.moondroid.coverflow.components.ui.containers.FeatureCoverFlow
                android:id="@+id/gallery_cover_flow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/not_found"
                android:visibility="visible"
                coverflow:coverHeight="@dimen/_80sdp"
                coverflow:coverWidth="@dimen/_80sdp"
                coverflow:maxScaleFactor="1.5"
                coverflow:reflectionGap="0px"
                coverflow:rotationThreshold="0.5"
                coverflow:scalingThreshold="0.5"
                coverflow:spacing="0.6" />

            <View
                android:id="@+id/view1"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_below="@+id/gallery_cover_flow"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@android:color/darker_gray" />


            <com.techno.studentguide.customview.CustomTextView
                android:id="@+id/Video"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/view1"
                android:padding="@dimen/_10sdp"
                android:text="@string/txt_title_video"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold" />

            <FrameLayout
                android:id="@+id/frame"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/Video"
                android:paddingBottom="@dimen/_75sdp">

                <WebView
                    android:id="@+id/video_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="gone" />

                <com.techno.studentguide.customview.CustomTextView
                    android:id="@+id/not_video_found"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/txt_title_gallery"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_12sdp"
                    android:visibility="gone" />

                <com.google.android.youtube.player.YouTubePlayerView
                    android:id="@+id/youtube_player"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#fff"
                    android:padding="5dp" />

                <Button
                    android:id="@+id/AD_BT_open_video"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Play"
                    android:visibility="gone" />
            </FrameLayout>


        </RelativeLayout>


    </ScrollView>

    <include
        layout="@layout/layout_footer_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" />
</RelativeLayout>
